--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,29 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.assignment {
+.assignments {
     display:flex;
+    flex-wrap:wrap;
+}
+
+.assignment {
+    width:20%;
     padding:10px;
     margin:10px;
-    background: lightblue
+    background: lightblue;
+    border-radius: 5px;
 }
 
 .assignment img {
-    width:100px;
-    padding:10px;
+    width:200px;
+    margin:10px;
+    border:4px solid #FFF;
+    display:block;
+    margin:auto;
+}
+
+.assignment img:hover {
+        border:4x dashed #f25c69
 }
 
 h1{
